Fix z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -85,6 +85,7 @@ header {
     top: 10px;
     right: 0;
     opacity: 0;
+    z-index: 1;
 }
 
 header a {
